# fdgen

./: .gitmodules  TODO  dsl  heat.fdgen  shallow_water.fdgen  shallow_water_bcs.fdgen  stommel.fdgen  tara
compiler/: fdgen  fdgen.cabal
compiler/FDGEN/: Algebra.hs  Backend.hs  CppBackend.hs  Discrete.hs  FPGADSLBackend.hs  Parser.hs  Precedence.hs  Pretty.hs  Stencil.hs  Template.hs  Tensor.hs  Util.hs
compiler/src/: Main.hs
compiler/templates/: jamie_dsl.template  mesh.hpp.template
doc/: staggering_offsets.txt
top-level/: .gitignore  fdgen  fdgen.cabal
top-level/FDGEN/: Algebra.hs  CppBackend.hs  Discrete.hs  FPGADSLBackend.hs  Parser.hs  Pretty.hs  Stencil.hs  Tensor.hs  Util.hs
top-level/templates/: jamie_dsl.template
