Name:                fdgen
Version:             0.1
Description:         Finite Difference Generator
Author:              Francis Russell
Maintainer:          fpr02@doc.ic.ac.uk
Build-Type:          Simple
Cabal-Version:       >=1.8.0.2

Library
  Hs-Source-Dirs:    .
  GHC-Options:       -Wall -fno-warn-missing-signatures
  Build-Depends:     base, parsec, containers, lens, pretty, split, filepath
  Exposed-Modules:   FDGEN.Parser FDGEN.Algebra FDGEN.Pretty FDGEN.Tensor FDGEN.Discrete FDGEN.Template FDGEN.Stencil
                     FDGEN.Backend, FDGEN.CppBackend FDGEN.FPGADSLBackend FDGEN.Precedence FDGEN.Util

Executable fdgen
  Main-is:           Main.hs
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Build-Depends:     base, fdgen, filepath
